[6241ded0ebf6de1c734aa681e7eb9e9698140d73]: Update 2019-07-10-solution-omni.md

--- a/en/manual/solution-omni.html
+++ b/en/manual/solution-omni.html
@@ -1595,6 +1595,27 @@
       <td>—</td>
       <td>—</td>
     </tr>
+    <tr>
+      <td><code class="highlighter-rouge">DebitCard.PanSequenceNumber</code></td>
+      <td>Number</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Card sequential number, used to identify the additional card checking account. Mandatory for transactions with EMV Chip Cards that have PAN Sequence Number (Tag 5F34).</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">PinPadInformation.TerminalId</code></td>
+      <td>String</td>
+      <td>—</td>
+      <td>Yes</td>
+      <td>Logic Number defined at the Cielo Concentrator.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">PinPadInformation.SerialNumber</code></td>
+      <td>String</td>
+      <td>—</td>
+      <td>Yes</td>
+      <td>Equipment’s serial number.</td>
+    </tr>
   </tbody>
 </table>
 
