[dc029ba6422228c69282f6faba7ed2fa60967bf5]: Update 2019-07-10-solution-omni.md

--- a/en/manual/solution-omni.html
+++ b/en/manual/solution-omni.html
@@ -3802,7 +3802,7 @@
     </tr>
     <tr>
       <td>6</td>
-      <td>Product selection (<code class="highlighter-rouge">ProductId</code> field of the transaction request):</td>
+      <td>Product selection (“ProductId” field of the transaction request):</td>
     </tr>
   </tbody>
 </table>
