[f130ec05bddc7b254e69d99328de8cd7638b907f]: Update 2019-07-10-solution-omni.md

--- a/en/manual/solution-omni.html
+++ b/en/manual/solution-omni.html
@@ -3819,7 +3819,7 @@
   <tbody>
     <tr>
       <td>1</td>
-      <td>Search for the the card’s AID (field <code class="highlighter-rouge">Aid</code>) in the table “Emv” and select the associated products through the field <code class="highlighter-rouge">ProductIds</code></td>
+      <td>Search for the the card’s AID (field <code class="highlighter-rouge">Aid</code>) in the table “Emv” and select the associated products through the field <code class="highlighter-rouge">ProductIds</code>.</td>
     </tr>
     <tr>
       <td>2</td>
@@ -3840,11 +3840,11 @@
   <tbody>
     <tr>
       <td>1</td>
-      <td>Ao recuperar o pan do cartão, buscar na tabela <code class="highlighter-rouge">Bins</code> um que o bin esteja entre os valores <code class="highlighter-rouge">InitialBin</code> e <code class="highlighter-rouge">FinalBin</code> (considerar sempre a faixa de Bins mais específica) e recuperar o produto associado no campo <code class="highlighter-rouge">ProductId</code>;</td>
+      <td>When recovering the card pan, search in the <code class="highlighter-rouge">Bins</code> table for a bin that is between the values <code class="highlighter-rouge">InitialBin</code> and <code class="highlighter-rouge">FinalBin</code> (always consider the most specific Bins range) and recover the associated product in the <code class="highlighter-rouge">ProductId</code> field;</td>
     </tr>
     <tr>
       <td>2</td>
-      <td>Recuperar os produtos que tem o mesmo <code class="highlighter-rouge">ProductType</code> (tabela <code class="highlighter-rouge">Products</code>) que iniciado na transação (DÉBITO, CRÉDITO…) e o mesmo fluxo do host (campo <code class="highlighter-rouge">HostFlow</code>) que os definido pela Cielo.</td>
+      <td>Recover products that have the same <code class="highlighter-rouge">ProductType</code> (<code class="highlighter-rouge">Products</code> table) that started in the transaction(DEBIT, CREDIT…) and the same host flow (<code class="highlighter-rouge">HostFlow</code> field) that those defined by Cielo;</td>
     </tr>
   </tbody>
 </table>
