[c670c262279e5624caac643351cfb1a480c2bf89]: Update 2017-01-01-cielo-lio.md

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -1012,7 +1012,7 @@ Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:</p>
       <td>4c603b44-19b8-497c-b072-60d5dd6807e7</td>
     </tr>
     <tr>
-      <td>pan</td>
+      <td>bin</td>
       <td>Número cartão tokenizado (6 primeiros dígitos – 4 últimos dígitos ou 4 últimos)</td>
       <td>476173-0036 ou **********4242</td>
     </tr>
