[c0786a0bb6a6c215637f38e21bf844676f775e7b]: Update 2019-07-10-solution-omni.md

--- a/en/manual/solution-omni.html
+++ b/en/manual/solution-omni.html
@@ -3762,7 +3762,7 @@
   <tbody>
     <tr>
       <td>1</td>
-      <td>Entering the transaction value (  <code class="highlighter-rouge">Amount</code> field of the transaction request)</td>
+      <td>Entering the transaction amount (  <code class="highlighter-rouge">Amount</code> field of the transaction request)</td>
     </tr>
     <tr>
       <td>2</td>
@@ -3802,7 +3802,7 @@
     </tr>
     <tr>
       <td>6</td>
-      <td>Product selection (“ProductId” field of the transaction request):</td>
+      <td>Product selection (<code class="highlighter-rouge">ProductId</code> field of the transaction request):</td>
     </tr>
   </tbody>
 </table>
@@ -3819,11 +3819,11 @@
   <tbody>
     <tr>
       <td>1</td>
-      <td>Search for the the card’s AID (field <code class="highlighter-rouge">Aid</code>) in the table “Emv” and select the associated products through the field <code class="highlighter-rouge">ProductIds</code>.</td>
+      <td>Search for the the card’s AID (field <code class="highlighter-rouge">Aid</code>) in the “Emv” table and select the associated products through the field <code class="highlighter-rouge">ProductIds</code>.</td>
     </tr>
     <tr>
       <td>2</td>
-      <td>In the associated products, recover those that have the same <code class="highlighter-rouge">ProductType</code> (table<code class="highlighter-rouge"> Products</code>) that started in the transaction (DEBIT, CREDIT ..) and the same host flow (<code class="highlighter-rouge">HostFlow</code> field) as defined by Cielo.</td>
+      <td>In the associated products, recover those that have the same <code class="highlighter-rouge">ProductType</code> (table <code class="highlighter-rouge">Products</code>) that started in the transaction (DEBIT, CREDIT ..) and the same host flow (<code class="highlighter-rouge">HostFlow</code> field) as defined by Cielo.</td>
     </tr>
   </tbody>
 </table>
