--- a/en/manual/solucao-omni.html
+++ b/en/manual/solucao-omni.html
@@ -3849,6 +3849,29 @@
   </tbody>
 </table>
 
+<h1 id="confirmation">Confirmation</h1>
+
+<p>When the payment returns successful, then it can be confirmed.</p>
+
+<p>This operation requires the PaymentId received on the return of the payment, in addition to the EmvData data if the payment was made through Chip.</p>
+
+<p>Confirmation is only required for payments made through POS.</p>
+
+<table>
+  <thead>
+    <tr>
+      <th style="text-align: center">SandBox</th>
+      <th style="text-align: center">Production</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align: center">https://apisandbox.cieloecommerce.cielo.com.br</td>
+      <td style="text-align: center">https://api.cieloecommerce.cielo.com.br/</td>
+    </tr>
+  </tbody>
+</table>
+
 </div>
 
 
