[f16d0cc45de614824a917a1d6e57c29687f6cbb5]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -11710,10 +11710,17 @@ Nesse modelo, o sistema do lojista é encarregado por definir o período, os dad
       <th>Descrição</th>
       <th>Tipo</th>
       <th>Tamanho</th>
-      <th>Formato</th>
+      <th>Obrigatório</th>
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <td><code class="highlighter-rouge">DebitCard.CardNumber</code></td>
+      <td>Número do Cartão do Comprador.</td>
+      <td>Texto</td>
+      <td>19</td>
+      <td>Sim</td>
+    </tr>
     <tr>
       <td><code class="highlighter-rouge">DebitCard.Holder</code></td>
       <td>Nome do Comprador impresso no cartão.</td>
