--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -6117,7 +6117,7 @@ Abaixo especificamos qualquer diferença existente:</p>
   </tbody>
 </table>
 
-<p>Atenção: O campo <code class="highlighter-rouge">IssuerTransactionId</code> também pode ser obtido através da consulta da primeira transação da recorrência. Ver detalhes de como fazer uma consulta <a href="https://developercielo.github.io/manual/cielo-ecommerce#consulta-de-transa%C3%A7%C3%B5es">aqui</a>.</p>
+<p><strong>Atenção:</strong> O campo <code class="highlighter-rouge">IssuerTransactionId</code> também pode ser obtido através da consulta da primeira transação da recorrência. Ver detalhes de como fazer uma consulta <a href="https://developercielo.github.io/manual/cielo-ecommerce#consulta-de-transa%C3%A7%C3%B5es"><strong>aqui</strong></a>.</p>
 
 <h2 id="captura-1">Captura</h2>
 
