[26f75bc29ec4b36046e8ec719082caa4db7b78de]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -6094,7 +6094,7 @@ PaymentIds associated with the identifier.</p>
   </tbody>
 </table>
 
-<p><strong>Warning:</strong> The <code class="highlighter-rouge">IssuerTransactionId</code> field can also be obtained by querying the first transaction of the recurrence. See details on how to make an appointment <a href="https://developercielo.github.io/en/manual/cielo-ecommerce#consulting-transactions">** here **</a>.</p>
+<p><strong>Warning:</strong> The <code class="highlighter-rouge">IssuerTransactionId</code> field can also be obtained by querying the first transaction of the recurrence. See details on how to make an appointment <a href="https://developercielo.github.io/en/manual/cielo-ecommerce#consulting-transactions"><strong>here</strong></a>.</p>
 
 <h2 id="capture-1">Capture</h2>
 
