[2e5b2a5691a068169410d77be42f124af99d9777]: Update 2019-07-10-solucao-omni.md

--- a/en/manual/solucao-omni.html
+++ b/en/manual/solucao-omni.html
@@ -4049,6 +4049,25 @@
   </tbody>
 </table>
 
+<h1 id="cancellation">Cancellation</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th style="text-align: center">SandBox</th>
+      <th style="text-align: center">Production</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align: center">https://apisandbox.cieloecommerce.cielo.com.br</td>
+      <td style="text-align: center">https://api.cieloecommerce.cielo.com.br/</td>
+    </tr>
+  </tbody>
+</table>
+
+<h2 id="payment-cancellation-using-typed-card">Payment cancellation using typed card</h2>
+
 </div>
 
 
