[7a1761a2392b34519d8d6f5a43d9ab6aaee3bdc8]: Update 2019-07-10-solucao-omni.md

--- a/en/manual/solucao-omni.html
+++ b/en/manual/solucao-omni.html
@@ -4742,7 +4742,7 @@
       <td>String</td>
       <td>—</td>
       <td>—</td>
-      <td>Error message/Acquisition transaction response.</td>
+      <td>Error code/Acquisition transaction response.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">ReturnMessage</code></td>
