[718837fdd2df9216a00c0e2b798997535ed79cc3]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -3188,7 +3188,7 @@ Abaixo especificamos qualquer diferença existente:</p>
   <span class="o">}</span>,
     <span class="s2">"Payment"</span>:
     <span class="o">{</span>  
-        <span class="s2">"Provider"</span>:<span class="s2">"Bradesco2"</span>,
+        <span class="s2">"Provider"</span>:<span class="s2">"Bradesco"</span>,
         <span class="s2">"Type"</span>:<span class="s2">"EletronicTransfer"</span>,
         <span class="s2">"Amount"</span>:10000,
         <span class="s2">"ReturnUrl"</span>:<span class="s2">"http://www.cielo.com.br"</span>
