--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -165,11 +165,9 @@
 
 <h2 id="bandeiras-e-emissores-disponíveis">Bandeiras e Emissores Disponíveis</h2>
 
-<p>Para envio de transações com pedido de autenticação 3DS 2.0 é fundamental que, além da Cielo, o Emissor e Bandeira estejam prontos com a solução. Atualmente estão disponíveis:</p>
+<p>Para envio de transações com pedido de autenticação 3DS 2.0 é fundamental que, além da Cielo, o Emissor e Bandeira estejam prontos com a solução. Dentre as bandeiras do mercado, atualmente estão disponíveis Visa e Mastercard no 3DS 2.0 Cielo. Ambas possuem um modelo de Stand-In, caso o Emissor ainda não esteja apto a responder um pedido de autenticação usando EMV 3DS 2.0. Nesse cenário, a bandeira avalia os dados enviados, como por exemplo o histórico comportamental do cliente e transacional, classificando os pedidos de autenticação como “Baixo Risco” e “Não Baixo Risco”. A partir dessas informações, os Emissores poderão contar com uma proteção mesmo não possuindo uma solução própria de 3DS 2.0, e terão uma maior confiança nas transações autenticadas. Em casos de Stand-In, a autenticação ocorre de forma silenciosa (sem desafio para o portador) e, uma vez que a transação foi autenticada, o liability em caso de fraude ficará com o Emissor. A decisão de autorizar ou não a transação é do Emissor.</p>
 
-<p><strong>- Mastercard:</strong> a bandeira possui um modelo de Stand-In, caso o Emissor ainda não esteja apto a responder um pedido de autenticação usando EMV 3DS 2.0. Nesse cenário, a Mastercard avalia os dados enviados, como por exemplo o histórico comportamental do cliente e transacional, classificando em modo Stand-In os pedidos de autenticação como “Baixo Risco” e “Não Baixo Risco”. A partir dessas informações, os Emissores poderão contar com uma proteção mesmo não possuindo uma solução própria de 3DS 2.0, e terão uma maior confiança nas transações autenticadas. Em casos de Stand-In, a Mastercard responderá a autenticação em 100% dos casos silenciosamente (sem desafio para o portador) e, uma vez que a transação foi autenticada, o liability em caso de fraude ficará com o Emissor. A decisão de autorizar ou não a transação é do Emissor.</p>
-
-<p><strong>- Visa:</strong> a bandeira não possui modelo de Stand-In e apenas Emissores 100% prontos com solução própria estão aptos a responder um pedido de autenticação usando EMV 3DS 2.0.</p>
+<p>Em breve as bandeiras Elo e Amex também estarão disponíveis.</p>
 
 <table>
   <tbody>
@@ -215,12 +213,12 @@
     </tr>
     <tr>
       <td>Acesso</td>
-      <td>—</td>
+      <td>Crédito</td>
       <td>—</td>
     </tr>
     <tr>
       <td>Banco Neon</td>
-      <td>Crédito</td>
+      <td>—</td>
       <td>Crédito</td>
     </tr>
     <tr>
