--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -15913,6 +15913,9 @@ O download poderá ser realizado a partir da seguinte URL:</p>
     <tr>
       <td><a href="https://www.samsung.com.br/samsungpay/"><em>Samsung Pay</em></a></td>
     </tr>
+    <tr>
+      <td><a href="https://developercielo.github.io/manual/google-pay"><em>Google Pay</em></a></td>
+    </tr>
   </tbody>
 </table>
 
