--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -15824,6 +15824,9 @@ The download can be made from the following URL:</p>
     <tr>
       <td><a href="https://www.samsung.com.br/samsungpay/"><em>Samsung Pay</em></a></td>
     </tr>
+    <tr>
+      <td><a href="https://developercielo.github.io/manual/google-pay"><em>Google Pay</em></a></td>
+    </tr>
   </tbody>
 </table>
 
