[b92e24d7ceec00b283c7f285f39df7d5d83e73ca]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -15825,7 +15825,7 @@ The download can be made from the following URL:</p>
       <td><a href="https://www.samsung.com.br/samsungpay/"><em>Samsung Pay</em></a></td>
     </tr>
     <tr>
-      <td><a href="https://developercielo.github.io/manual/google-pay"><em>Google Pay</em></a></td>
+      <td><a href="https://developercielo.github.io/en/manual/google-pay"><em>Google Pay</em></a></td>
     </tr>
   </tbody>
 </table>
