[de278e88ab7d7902e5f7ad0fb2f8031ab90761ee]: Update 2019-07-10-solucao-omni.md

--- a/en/manual/solucao-omni.html
+++ b/en/manual/solucao-omni.html
@@ -4404,7 +4404,7 @@
       <td>Integer int16</td>
       <td>—</td>
       <td>—</td>
-      <td>Status da transação <br />0 = Not finished <br />1 = Authorized <br />2 = Paid <br />3 = Denied <br />10 = Canceled<br />13 = Aborted</td>
+      <td>Transaction status. <br />0 = Not finished <br />1 = Authorized <br />2 = Paid <br />3 = Denied <br />10 = Canceled<br />13 = Aborted</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">ReturnCode</code></td>
@@ -4459,7 +4459,7 @@
       <td>Integer int16</td>
       <td>—</td>
       <td>—</td>
-      <td>Status da transação <br />0 = Not finished <br />1 = Authorized <br />2 = Paid <br />3 = Denied <br />10 = Canceled<br />13 = Aborted</td>
+      <td>Transaction status. <br />0 = Not finished <br />1 = Authorized <br />2 = Paid <br />3 = Denied <br />10 = Canceled<br />13 = Aborted</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">ReturnCode</code></td>
